--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="UI/style.css">
 </head>
 <body>
+	<div class="cover"></div>
 	<div class="PortalCover" style="visibility: hidden;">
 		<div class="AccountPortal">
 			<div class="top">
@@ -20,14 +21,21 @@
 		<div class="center">
 			<div class="Sign-Up">
 				<div>
-					<input style="text-align: center;" type="text" name="text" value="Name" />
+					<p>Name:</p> 
+					<input style="text-align: center;" type="text" name="text" value="Kato Isa" />
+					<p>Tell/number:</p> 
 					<input style="text-align: center;" type="text" name="tell" value="256 705207718" />
+					<p>Password:</p>
+					<input style="text-align: center;" type="password" name="tell" />
 				</div>
 				
 			</div>
-			<div class="Sign-In">
+			<div class="Sign-In">	
 				<div>
+				<p>Tell/number:</p> 
 				<input style="text-align: center;" type="text" name="tell" value="256 705207718" />
+				<p>Password:</p> 
+				<input style="text-align: center;" type="password" name="tell" />
 				</div>
 			</div>
 		</div>
@@ -38,7 +46,6 @@
 		</div>
 		</div>
     </div>
-	<div class="cover"></div>
 	<div class="header">
 		<div class="name">
 			<h2>TICKET HUB</h2>
@@ -46,8 +53,8 @@
 		<div class="menu">
 		   <div class="userAccount">
 			<ol>
-				<li class="SignInHome">SIGN UP</li>
-				<li class="SignUpHome">SIGN IN</li>
+				<li class="SignUpHome">SIGN UP</li>
+				<li class="SignInHome">SIGN IN</li>
 			</ol>
 		   </div>
 		</div>
@@ -73,6 +80,9 @@
 			</div>
 		</div>
 	</div>
+	<!-- simplified.js library -->
+	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
+	<!-- site scripts -->
     <script type="text/javascript" src="UX/main.js"></script>
 </body>
 </html>
