--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 			<h2>TICKET HUB</h2>
 		</div>
 		<div class="menu">
+		   <div class="closeMenue"></div>
 		   <div class="userAccount">
 			<ol>
 				<li class="SignUpHome">SIGN UP</li>
