--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
 		<div class="center">
 			<div class="Sign-Up">
 				<div>
-					<p>Name:</p> 
+					<p>Name:</p>
 					<input style="text-align: center;" type="text" name="text" value="Kato Isa" />
 					<p>Tell/number:</p> 
-					<input style="text-align: center;" type="text" name="tell" value="256 705207718" />
+					<input style="text-align: center;" type="text" name="tell" value="256 705207***" />
 					<p>Password:</p>
 					<input style="text-align: center;" type="password" name="tell" />
 				</div>
@@ -33,13 +33,18 @@
 			<div class="Sign-In">	
 				<div>
 				<p>Tell/number:</p> 
-				<input style="text-align: center;" type="text" name="tell" value="256 705207718" />
+				<input style="text-align: center;" type="text" name="tell" value="256 705207***" />
 				<p>Password:</p> 
 				<input style="text-align: center;" type="password" name="tell" />
-				</div>
+				</div> 
 			</div>
 		</div>
-		<div class="submit">
+		<div class="submit-1">
+			<div class="icon">
+  				<div class="arrow"></div>
+			</div>
+		</div>
+		<div class="submit-2">
 			<div class="icon">
   				<div class="arrow"></div>
 			</div>
