--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,11 @@
 			</div>
 		</div>
 		<div class="submit-1">
-			<div class="icon">
-  				<div class="arrow"></div>
-			</div>
+			<a href="#">
+				<div class="icon">
+	  				<div class="arrow"></div>
+				</div>
+			</a>
 		</div>
 		<div class="submit-2">
 			<div class="icon">
@@ -80,10 +82,12 @@
 				<div class="ticketImage">
 					<img width="200" src="UI/img/ticket.jpg" alt="ticket">
 				</div>
-				<div class="buyButton">
-					<button>BUY TICKET</button>
-				</div>
 			</div>
+		</div>
+	</div>
+	<div class='sucessMassage'>
+		<div class="massage">
+			<p>Operation was sucessfull</p>
 		</div>
 	</div>
 	<!-- simplified.js library -->
