--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,29 @@
 			<p>Operation was sucessfull</p>
 		</div>
 	</div>
+	<script type="module">
+		// Import the functions you need from the SDKs you need
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
+		import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-analytics.js";
+		// TODO: Add SDKs for Firebase products that you want to use
+		// https://firebase.google.com/docs/web/setup#available-libraries
+	  
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		const firebaseConfig = {
+		  apiKey: "AIzaSyDk6WFX1dGHkxGKlpZRQVVAgPv3D7AtNtc",
+		  authDomain: "ticket-hub-4286d.firebaseapp.com",
+		  projectId: "ticket-hub-4286d",
+		  storageBucket: "ticket-hub-4286d.appspot.com",
+		  messagingSenderId: "909830747232",
+		  appId: "1:909830747232:web:62bc63b9e2def1eecb3f05",
+		  measurementId: "G-YXPSCP6JNR"
+		};
+	  
+		// Initialize Firebase
+		const app = initializeApp(firebaseConfig);
+		const analytics = getAnalytics(app);
+	  </script>
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
