--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ticke-thub</title>
 	<link rel="stylesheet" type="text/css" href="UI/style.css">
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+  
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase.js" ></script> -->
+  <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+
 </head>
 <body>
 	<div class="cover"></div>
