firebase error fixing

--- a/src/index.html
+++ b/src/index.html
@@ -117,8 +117,7 @@
 		};
 	  
 		// Initialize Firebase
-		const app = initializeApp(firebaseConfig);
-		const analytics = getAnalytics(app);
+      firebase.initializeApp(firebaseConfig);
 	  </script>
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
