firebase error fix

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 			<p>Operation was sucessfull</p>
 		</div>
 	</div>
-	<script type="module">
+	<script>
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
 		// TODO: Add SDKs for Firebase products that you want to use
