--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -97,6 +97,8 @@
 
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
+		const db = firebase.firestore();
+		
 	</script>
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="../UX/simplify(js)/Simplified.js"></script>
