--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -35,7 +35,7 @@
 	<main>
 		<div class="introCover">
 			<div class="intro">
-				HELLO <span>KATO</span>
+				HELLO <span class="userIdName"></span>
 			</div>
 
 			<div class="contain">
