--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -46,10 +46,19 @@
 				</div>
 
 				<div class="SearchResults">
-					<div class="person">	
-						<div class="row namewrapper"><div class="nameHead"><tt>Name</tt></div> <div class="name"><tt>User Name</tt></div> </div>
-						<div class="row numberwrapper"><div class="numberHead"><tt>Number</tt></div> <div class="number"><tt>0705207718</tt></div> </div>
-						<div class="row ticketIDwrapper"><div class="ticketNoHead"><tt>Ticket</tt></div> <div class="ticketNo"><tt><span>#C</span>35667</tt></div></div>
+					<div class="person">
+						<div class="row namewrapper">
+							<div class="nameHead"><tt>Name</tt></div>
+							<div class="name"><tt>User Name</tt></div>
+						</div>
+						<div class="row numberwrapper">
+							<div class="numberHead"><tt>Number</tt></div>
+							<div class="number"><tt>0705207718</tt></div>
+						</div>
+						<div class="row ticketIDwrapper">
+							<div class="ticketNoHead"><tt>Ticket</tt></div>
+							
+						</div>
 					</div>
 				</div>
 		    </div>
