--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -57,7 +57,7 @@
 						</div>
 						<div class="row ticketIDwrapper">
 							<div class="ticketNoHead"><tt>Ticket</tt></div>
-							
+							<div class="ticketNo"><tt><span>#C</span>35667</tt></div>
 						</div>
 					</div>
 				</div>
