--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -77,6 +77,30 @@
 
 			</div>
 		</div>
+		<div class="paymentsetup">
+			<div class="paymentHeader">
+				<h2>USE MOBILE MONEY TO PAY</h2>
+			</div>
+			<div class="paymentbody">
+				<div class="cont">
+					<p>
+						use the the follwing number to pay,<br> 
+						your account will get varified <br>
+						in about 1 - 2 hours, <br>
+						use the details below  <br>
+						<tt>Details-></tt> <br>
+						<tt>Number</tt>: <span style="color: #19f;">0704803772</span> <br>
+						<tt>Names</tt> : <span style="color: #19f;">IBRAHIM TUMWESIGYE</span> <br>
+					</p>
+				</div>
+				<div class="paymentnumber">
+					<input type="text" name="number" value="Enter number"/>
+				</div>
+				<div class="submitButton">
+					<button>submit</button>
+				</div>
+			</div>
+		</div>
 	</main>
 	<script>
 		// Your web app's Firebase configuration
