--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -89,8 +89,8 @@
 						in about 1 - 2 hours, <br>
 						use the details below  <br>
 						<tt>Details-></tt> <br>
-						<tt>Number</tt>: <span style="color: #19f;">0704803772</span> <br>
-						<tt>Names</tt> : <span style="color: #19f;">IBRAHIM TUMWESIGYE</span> <br>
+						<tt>Number</tt>: <span style="color: #19f;"><tt>0704803772</tt></span> <br>
+						<tt>Names</tt> : <span style="color: #19f;"><tt>IBRAHIM TUMWESIGYE</tt></span> <br>
 					</p>
 				</div>
 				<div class="paymentnumber">
