--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -88,7 +88,7 @@
 						your account will get varified <br>
 						in about 1 - 2 hours, <br>
 						use the details below  <br>
-						<tt>Details-></tt> <br>
+						<tt>Send to this number-></tt> <br>
 						<tt>Number</tt>: <span style="color: #19f;"><tt>0704803772</tt></span> <br>
 						<tt>Names</tt> : <span style="color: #19f;"><tt>IBRAHIM TUMWESIGYE</tt></span> <br>
 					</p>
