--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -81,19 +81,21 @@
 			<div class="paymentHeader">
 				<h2>USE MOBILE MONEY TO PAY</h2>
 			</div>
+
 			<div class="paymentbody">
 				<div class="cont">
 					<p>
 						use the the follwing number to pay,<br> 
 						your account will get varified <br>
 						in about 1 - 2 hours, <br>
-						use the details below  <br>
+						use the details below  <br><br>
 						<tt>Send to this number-></tt> <br>
 						<tt>Number</tt>: <span style="color: #19f;"><tt>0704803772</tt></span> <br>
-						<tt>Names</tt> : <span style="color: #19f;"><tt>IBRAHIM TUMWESIGYE</tt></span> <br>
+						<tt>Names</tt> : <span style="color: #19f;"><tt>IBRAHIM TUMWESIGYE</tt></span> <br><br>
 					</p>
 				</div>
 				<div class="paymentnumber">
+					<p>Enter the number your using to pay below</p>
 					<input type="text" name="number" value="Enter number"/>
 				</div>
 				<div class="submitButton">
