--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -91,7 +91,7 @@
 					</p>
 				</div>
 				<div class="paymentnumber">
-					<p>Enter the number your using to pay below</p>
+					<p>Enter the number your using to pay below</p><br>
 					<input type="text" name="number" value="Enter number"/>
 				</div>
 				<div class="submitButton">
