--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -95,7 +95,8 @@
 					<input type="text" name="number" value="Enter number"/>
 				</div>
 				<div class="submitButton">
-					<button>submit</button>
+					<button class="close">close</button>
+					<button class="submit">submit</button>
 				</div>
 			</div>
 		</div>
