--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -93,6 +93,8 @@
 				<div class="paymentnumber">
 					<p>Enter the number your using to pay below</p><br>
 					<input type="text" name="number" value="Enter number"/>
+					<p>Transaction ID- is in your Airtel money massage</p>
+					<input type="text" name="TransactionID" value="Enter transaction ID"/>
 				</div>
 				<div class="submitButton">
 					<button class="close">close</button>
