--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -93,7 +93,7 @@
 				<div class="paymentnumber">
 					<p>Enter the number your using to pay below</p><br>
 					<input type="text" name="number" value="Enter number"/>
-					<input type="text" name="TransactionID" value="Enter transaction ID"/>
+					<br><input type="text" name="TransactionID" value="Enter transaction ID"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
 
 				</div>
