--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -92,8 +92,8 @@
 				</div>
 				<div class="paymentnumber">
 					<p>Enter the number your using to pay below</p><br>
-					<input type="text" name="number" value="Enter number"/>
-					<br><input type="text" name="TransactionID" value="Enter transaction ID"/>
+					<input class="numberInput" type="text" name="number" value="Enter number"/>
+					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
 
 				</div>
