--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -91,7 +91,7 @@
 					</p>
 				</div>
 				<div class="paymentnumber">
-					<p>Enter the number your using to pay below</p><br>
+					<p>Enter the number and trans ID</p><br>
 					<input class="numberInput" type="text" name="number" value="Enter number"/>
 					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
