--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -56,7 +56,7 @@
 										<div class="name">Concert Name</div>
 										<div class="Date">Date: <tt class="color">17/12/2022</tt></div>
 										<div class="more">
-											<div>buy-ticket</div>
+											<div class="CTaction">buy-ticket</div>
 											<div class="arrowBody">
 												<div class="arrow1"></div>
 											</div>
