--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
 			<div class="Sign-Up">
 				<div>
 					<p>Name:</p>
-					<input style="text-align: center;" type="text" name="text" value="Kato Isa" />
+					<input style="text-align: center;" type="text" name="text" value="IBRAHIM TUMWESIGYE" />
 					<p>Tell/number:</p> 
-					<input style="text-align: center;" type="text" name="tell" value="256 705207***" />
+					<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 					<p>Password:</p>
 					<input style="text-align: center;" type="password" name="tell" />
 				</div>
@@ -40,7 +40,7 @@
 			<div class="Sign-In">	
 				<div>
 				<p>Tell/number:</p> 
-				<input style="text-align: center;" type="text" name="tell" value="256 705207***" />
+				<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 				<p>Password:</p> 
 				<input style="text-align: center;" type="password" name="tell" />
 				</div> 
