--- a/src/index.html
+++ b/src/index.html
@@ -46,13 +46,12 @@
 				</div> 
 			</div>
 		</div>
-		<div class="submit-1">
-			<a href="#">
-				<div class="icon">
-	  				<div class="arrow"></div>
-				</div>
-			</a>
-		</div>
+		<a class="submit-1" href="#">
+			<div class="icon">
+				<div class="arrow"></div>
+			</div>
+	    </a>
+
 		<div class="submit-2">
 			<div class="icon">
   				<div class="arrow"></div>
