--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
 			</div>
 	    </a>
 
-		<div class="submit-2">
+		<a class="submit-2" href="#">
 			<div class="icon">
-  				<div class="arrow"></div>
+				<div class="arrow"></div>
 			</div>
-		</div>
+	    </a>
 		</div>
     </div>
 	<div class="header">
