--- a/src/pages/ADMIN/admin.html
+++ b/src/pages/ADMIN/admin.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Admin-tickethub</title>
-	<link rel="stylesheet" type="text/css" href="../UI/style.css">
-	<link rel="stylesheet" type="text/css" href="../UI/admin.css">
+	<link rel="stylesheet" type="text/css" href=".../UI/style.css">
+	<link rel="stylesheet" type="text/css" href=".../UI/admin.css">
 </head>
 <body>
 	<div class="cover"></div>
@@ -65,8 +65,8 @@
 		</div>
 	</main>
 	<!-- simplified.js library -->
-	<script type="text/javascript" src="../UX/simplify(js)/Simplified.js"></script>
+	<script type="text/javascript" src=".../UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/javascript" src="../UX/admin.js"></script>
+    <script type="text/javascript" src=".../UX/admin.js"></script>
 </body>
 </html>
