--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -53,10 +53,10 @@
 									<div class="imageHolder">
 									</div>
 									<div class="Concertdetails">
-										<div class="name">Concert Name</div>
-										<div class="Date">Date: <tt class="color">17/12/2022</tt></div>
+										<div class="name">TULI BATOORONA</div>
+										<div class="Date">Date: <tt class="color">25/12/2022</tt></div>
 										<div class="more">
-											<div class="CTaction">buy-ticket</div>
+											<div class="CTaction">BUY NOW</div>
 											<div class="arrowBody">
 												<div class="arrow1"></div>
 											</div>
