--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -67,6 +67,6 @@
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/javascript" src="UX/admin.js"></script>
+    <script type="text/javascript" src="admin.js"></script>
 </body>
 </html>
