--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -65,7 +65,7 @@
 		</div>
 	</main>
 	<!-- simplified.js library -->
-	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
+	<script type="text/javascript" src="simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
     <script type="text/javascript" src="admin.js"></script>
 </body>
