--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -69,7 +69,15 @@
 							<div class='404' style="display:none; font-size: 25px;margin-top: 20px;">!BUY A TICKET.
 							</div>
 							<p>This is what you will show at the gate</p>
-							<p>You can take a screenshot or keep the ticket number here.</p>
+							<p>What the red and green colors on ticket mean.</p>
+							<div class="status">
+								<div class="clear">
+									<div></div><div>Verified Ticket</div>
+								</div>
+								<div class="off">
+									<div></div><div>Not Verified</div>
+								</div>
+							</div>
 							
 						</div>
 					</div>
