--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -69,7 +69,7 @@
 							<div class='404' style="display:none; font-size: 25px;margin-top: 20px;">!BUY A TICKET.
 							</div>
 							<p>This is what you will show at the gate</p>
-							<p>What the red and green colors on ticket mean.</p>
+							<p><tt>What the red and green colors on ticket mean.</tt></p>
 							<div class="status">
 								<div class="clear">
 									<div></div><div>Verified Ticket</div>
