--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -72,10 +72,10 @@
 							<p><tt>What the <span style="color: #ff4b4b;">red</span> and <span style="color: #00ff40;">green</span> colors on ticket mean.</tt></p>
 							<div class="status">
 								<div class="clear">
-									<div></div> <div>Verified Ticket</div>
+									<div><span style="background: #00ff40;">Green</span> verified Ticket</div>
 								</div>
 								<div class="off">
-									<div></div> <div>Not Verified</div>
+									<div><span style="background: #ff4b4b;">Red</span> not verified</div>
 								</div>
 							</div>
 							
