--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -69,15 +69,9 @@
 							<div class='404' style="display:none; font-size: 25px;margin-top: 20px;">!BUY A TICKET.
 							</div>
 							<p>This is what you will show at the gate</p>
-							<p><tt>What the <span style="color: #ff4b4b;">red</span> and <span style="color: #00ff40;">green</span> colors on ticket mean.</tt></p>
-							<div class="status">
-								<div class="clear">
-									<div><span style="background: #00ff40; width: 44px;">Green</span> verified Ticket</div>
-								</div>
-								<div class="off">
-									<div><span style="background: #ff4b4b; width: 44px;">Red</span> not verified</div>
-								</div>
-							</div>
+							<p><tt><span style="color: #ff4b4b;">red</span> not verified<br>
+							<span style="color: #00ff40;">green</span> verified</tt></p>
+
 							
 						</div>
 					</div>
