--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -64,7 +64,36 @@
 		    </div>
 		</div>
 	</main>
-	
+	<div class="PortalCover" style="visibility: hidden;">
+		<div class="AccountPortal">
+		<div class="top">
+			<div class="Title2">
+				<h2>SIGN IN</h2>
+			</div>
+		</div>
+		<div class="center">
+			<div class="Sign-In">	
+				<div>
+				<p>Tell/number:</p> 
+				<input style="text-align: center;" type="text" name="tell" value="0704803772" />
+				<p>Password:</p> 
+				<input style="text-align: center;" type="password" name="tell" />
+				</div> 
+			</div>
+		</div>
+		<a class="submit-1" href="#">
+			<div class="icon">
+				<div class="arrow"></div>
+			</div>
+	    </a>
+
+		<a class="submit-2" href="#">
+			<div class="icon">
+				<div class="arrow"></div>
+			</div>
+	    </a>
+		</div>
+    </div>
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
