--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -42,7 +42,7 @@
 				<div class="containFlex">
 					<div class="statusMenueButtons">
 						<div class="ConcertsMenuButton Active">CONCERTS</div>
-						<div class="TicketsMenuButton">TICKETS</div>
+						<div class="TicketsMenuButton">TICKET</div>
 					</div>
 					<div class="ContetsContainer">
 						<div class="ConcertContentsBody ">
