--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -64,7 +64,7 @@
 		    </div>
 		</div>
 	</main>
-	<div class="PortalCover" style="visibility: hidden;">
+	<div class="PortalCover">
 		<div class="AccountPortal">
 		<div class="top">
 			<div class="Title2">
