--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -6,6 +6,13 @@
 	<title>Admin-tickethub</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="admin.css">
+	
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<!-- <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase.js" ></script> -->
+	<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+
 </head>
 <body>
 	<div class="cover"></div>
@@ -94,6 +101,24 @@
 	    </a>
 		</div>
     </div>
+	<script>
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		const firebaseConfig = {
+			apiKey: "AIzaSyDk6WFX1dGHkxGKlpZRQVVAgPv3D7AtNtc",
+			authDomain: "ticket-hub-4286d.firebaseapp.com",
+			projectId: "ticket-hub-4286d",
+			storageBucket: "ticket-hub-4286d.appspot.com",
+			messagingSenderId: "909830747232",
+			appId: "1:909830747232:web:62bc63b9e2def1eecb3f05",
+			measurementId: "G-YXPSCP6JNR"
+		};
+
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		const db = firebase.firestore();
+		
+	</script>
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
