error button fix

--- a/src/index.html
+++ b/src/index.html
@@ -46,17 +46,17 @@
 				</div> 
 			</div>
 		</div>
-		<a class="submit-1" href="#">
+		<div class="submit-1">
 			<div class="icon">
 				<div class="arrow"></div>
 			</div>
-	    </a>
+	    </div>
 
-		<a class="submit-2" href="#">
+		<div class="submit-2">
 			<div class="icon">
 				<div class="arrow"></div>
 			</div>
-	    </a>
+	    </div>
 		</div>
     </div>
 	<div class="header">
