--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -88,11 +88,11 @@
 				</div> 
 			</div>
 		</div>
-		<a class="submit-2" href="#">
+		<div class="submit-2">
 			<div class="icon">
 				<div class="arrow"></div>
 			</div>
-	    </a>
+	    </div>
 		</div>
     </div>
 	<script>
