--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -18,7 +18,7 @@
 	<div class="cover"></div>
 	<div class="header">
 		<div class="name">
-			<h2>TICKET HUB</h2>
+			<h2 >ADMIN</h2>
 		</div>
 		<div class="menu">
 		   <div class="closeMenue"></div>
@@ -31,10 +31,6 @@
 	</div>
 	<main>
 		<div class="introCover">
-			<div class="intro">
-				ADMIN 
-			</div>
-
 			<div class="contain">
 				<div class="searchArea">
 					<div class="searchAreaheader">
