--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -29,7 +29,44 @@
 		   </div>
 		</div>
 	</div>
+	<main>
+		<div class="introCover">
+			<div class="contain">
+				<div class="searchArea">
+					<div class="searchAreaheader">
+						<p>Enter phone number.</p>
+					</div>
+					<div class="search">
+					 <div class="wrapSearchArea">
+					 	<div class="left">
+							<input type="text" name="search" />
+						</div>
+						<div class="searchButton">
+							<button>search</button>
+						</div>
+					 </div>
+					</div>
+				</div>
 
+				<div class="SearchResults">
+					<div class="person">
+						<div class="row namewrapper">
+							<div class="nameHead"><tt>Name</tt></div>
+							<div class="name"><tt>User Name</tt></div>
+						</div>
+						<div class="row numberwrapper">
+							<div class="numberHead"><tt>Number</tt></div>
+							<div class="number"><tt>0705207718</tt></div>
+						</div>
+						<div class="row ticketIDwrapper">
+							<div class="ticketNoHead"><tt>Ticket</tt></div>
+							<div class="ticketNo"><tt><span>#C</span>35667</tt></div>
+						</div>
+					</div>
+				</div>
+		    </div>
+		</div>
+	</main>
 	<div class="PortalCover">
 		<div class="AccountPortal">
 		<div class="top">
