addin new files

--- a/src/pages/ADMIN/index.html
+++ b/src/pages/ADMIN/index.html
@@ -75,6 +75,6 @@
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/javascript" src="admin.js"></script>
+    <script type="text/javascript" src="Authr.js"></script>
 </body>
 </html>
