--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Admin-tickethub</title>
+	<title>Home-Admin</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="admin.css">
 	
