--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -39,10 +39,10 @@
 					<div class="search">
 					 <div class="wrapSearchArea">
 					 	<div class="left">
-							<input type="text" name="search" />
+							<input class="search" type="text" name="search" />
 						</div>
 						<div class="searchButton">
-							<button>search</button>
+							<button class="submitsearch">search</button>
 						</div>
 					 </div>
 					</div>
