--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -39,7 +39,7 @@
 					<div class="search">
 					 <div class="wrapSearchArea">
 					 	<div class="left">
-							<input class="search" type="text" name="search" />
+							<input class="searchInputarea" type="text" name="search" />
 						</div>
 						<div class="searchButton">
 							<button class="submitsearch">search</button>
