--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -62,6 +62,10 @@
 							<div class="ticketNoHead"><tt>Ticket</tt></div>
 							<div class="ticketNo"><tt><span>#C</span>35667</tt></div>
 						</div>
+						<div class="row numberwrapper">
+							<div class="numberHead"><tt>Trans ID</tt></div>
+							<div class="number"><tt>1234568902</tt></div>
+						</div>
 					</div>
 				</div>
 		    </div>
