--- a/src/pages/ADMIN/home-admin.html
+++ b/src/pages/ADMIN/home-admin.html
@@ -66,6 +66,10 @@
 							<div class="numberHead"><tt>Trans ID</tt></div>
 							<div class="number"><tt>1234568902</tt></div>
 						</div>
+						<div class="row numberwrapper">
+							<div class="numberHead"><tt>--></tt></div>
+							<div class="number"><button class="verifyUser">Verify</button></div>
+						</div>
 					</div>
 				</div>
 		    </div>
