--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
 			<div class="Sign-In">	
 				<div>
 				<p>Tell/number:</p> 
+				<tt>this is the same number you will use to pay</tt>
 				<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 				<p>Password:</p> 
 				<input style="text-align: center;" type="password" name="tell" />
