--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,10 @@
 				<div>
 					<p>Name:</p>
 					<input style="text-align: center;" type="text" name="text" value="IBRAHIM TUMWESIGYE" />
-					<p>Tell/number:</p> 
+					<p>Tell/number:</p> <br>
+					<tt>this is the same number you will use to pay</tt>
 					<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 					<p>Password:</p>
-					<tt>this is the same number you will use to pay</tt>
 				<input style="text-align: center;" type="password" name="tell" />
 				</div>
 				
