--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 					<p>Name:</p>
 					<input style="text-align: center;" type="text" name="text" value="IBRAHIM TUMWESIGYE" />
 					<p>Tell/number:</p> <br>
-					<tt>this is the same number you will use to pay</tt> <br>
+					<p><tt>this is the same number you will use to pay</tt></p>
 					<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 					<p>Password:</p>
 				<input style="text-align: center;" type="password" name="tell" />
