--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 				<div>
 					<p>Name:</p>
 					<input style="text-align: center;" type="text" name="text" value="IBRAHIM TUMWESIGYE" />
-					<p>Tell/number: <br> <tt>this is the same number you will use to pay</tt></p>
+					<p>Tell/number:</p>
 					<input style="text-align: center;" type="text" name="tell" value="0704803772" />
 					<p>Password:</p>
 				<input style="text-align: center;" type="password" name="tell" />
