--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -93,7 +93,7 @@
 				</div>
 				<div class="paymentnumber">
 					<p>Enter your number and trans ID- <br>
-					<input class="numberInput" type="text" name="number" value="Enter number"/>
+					<p class="numberrepresentative">0705207718</p>
 					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
 				</div>
