--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -92,8 +92,8 @@
 					</p>
 				</div>
 				<div class="paymentnumber">
-					<p>Enter your number and trans ID- <br>
-					<p class="numberrepresentative">0705207718</p>
+					<p>Use the number you used to login<br>
+					<input class="numberInput" type="text" name="number" value="Enter number"/>
 					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
 				</div>
