--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -92,7 +92,7 @@
 					</p>
 				</div>
 				<div class="paymentnumber">
-					<p>Use the number you used to login<br>
+					<p>Pay with the number you used to login<br>
 					<input class="numberInput" type="text" name="number" value="Enter number"/>
 					<p>Transaction ID- is in your Airtel money massage</p>
 					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
