--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -92,9 +92,9 @@
 					</p>
 				</div>
 				<div class="paymentnumber">
-					<p>Pay with the number you used to login<br>
+					<p><tt> Pay with the number you used to login</tt><br>
 					<input class="numberInput" type="text" name="number" value="Enter number"/>
-					<p>Transaction ID- is in your Airtel money massage</p>
+					<p><tt>Transaction ID- is in your Airtel money massage</tt></p>
 					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 				</div>
 				<div class="submitButton">
