--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -95,7 +95,7 @@
 					<p><tt> Pay with the number you used to login</tt><br>
 					<input class="numberInput" type="text" name="number" value="Enter number"/>
 					<p><tt>Transaction ID- is in your Airtel money massage</tt></p>
-					<br><input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
+					<input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 				</div>
 				<div class="submitButton">
 					<button class="close">close</button>
