--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -94,7 +94,7 @@
 				<div class="paymentnumber">
 					<p><tt> Pay with the number you used to login</tt><br>
 					<input class="numberInput" type="text" name="number" value="Enter number"/>
-					<p><tt>Transaction ID- is in your Airtel money massage</tt></p>
+					<p><tt>Transaction ID- will be in your Airtel money massage after paying</tt></p>
 					<input class="varificaionCodeInput" type="text" name="TransactionID" value="Enter tans ID"/>
 				</div>
 				<div class="submitButton">
