--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,19 @@
 			</div>
 		</div>
 	</div>
+	<style>
+		.footer{
+			background: #333;
+			color:#fff;
+			position: relative;
+			bottom: 5px;
+			text-align: center;
+			z-index: 130;
+		}
+	</style>
+	<div class="footer">
+		<p>Designed and developed by <tt>Kato Isa</tt> </p>
+    </div>
 	<script>
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
