--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 	</div>
 	<style>
 		.footer{
-			background: #333;
+			background: #000000db;
 			color:#fff;
 			position: relative;
 			bottom: 5px;
@@ -102,7 +102,7 @@
 		}
 	</style>
 	<div class="footer">
-		<p>Designed and developed by <tt>Kato Isa</tt> </p>
+		<p><tt>Designed and developed by: Kato Isa</tt> </p>
     </div>
 	<script>
 		// Your web app's Firebase configuration
