--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -103,6 +103,19 @@
 			</div>
 		</div>
 	</main>
+	<style>
+		.footer{
+			background: #000000db;
+			color:#fff;
+			position: relative;
+			bottom: 0px;
+			text-align: center;
+			z-index: 130;
+		}
+	</style>
+	<div class="footer">
+		<p><tt>Designed and developed by: Kato Isa</tt> </p>
+    </div>
 	<script>
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
