--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
 			.footer{
 				background: #000000db;
 				color:#fff;
-				position: relative;
+				position: absolute;
 				bottom: 0px;
 				text-align: center;
 				z-index: 130;
