--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -86,8 +86,8 @@
 				<div class="cont">
 					<p>
 						<tt>Send to this number-></tt> <br>
-						<tt>Number</tt>: <span style="color: #19f;"><tt>0704803772</tt></span> <br>
-						<tt>Names</tt> : <span style="color: #19f;"><tt>IBRAHIM TUMWESIGYE</tt></span> <br><br>
+						<tt>Number</tt>: <span style="color: #19f;"><tt> 0756098476 </tt></span> <br>
+						<tt>Names</tt> : <span style="color: #19f;"><tt>Tumusiime Saidi</tt></span> <br><br>
 					</p>
 				</div>
 				<div class="paymentnumber">
