--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			<div class="Sign-Up">
 				<div>
 					<p>Name:</p>
-					<input style="text-align: center;" type="text" name="text" value="IBRAHIM TUMWESIGYE" />
+					<input style="text-align: center;" type="text" name="text" value="Tumusiime Saidi" />
 					<p>Tell/number:</p>
 					<input style="text-align: center;" type="text" name="tell" value="0756098476" />
 					<p>Password:</p>
