--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ticke-thub</title>
 	<link rel="stylesheet" type="text/css" href="UI/style.css">
+	<!-- Add party town ... -->
+	<script>
+		partytown = {
+		  forward: ['dataLayer.push'],
+		};
+	</script>
+	<script>
+		/* Inlined Partytown Snippet */
+	</script>
+	<script type="text/partytown" src="https://example.com/analytics.js"></script>
+
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
-  
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase.js" ></script> -->
-  <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+	<script type="text/partytown" src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+	<script type="text/partytown" type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
+	<script type="text/partytown" src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
 
 </head>
 <body>
