--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 			<p><tt>Designed and developed by: Kato Isa</tt> </p>
 		</div>
 	</div>
-	<script>
+	<script type="text/partytown">
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
