--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,6 @@
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/javascript" src="UX/main.js"></script>
+    <script type="text/partytown" src="UX/main.js"></script>
 </body>
 </html>
