--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
 	<script>
 		/* Inlined Partytown Snippet */
 	</script>
-	<script type="text/partytown" src="https://example.com/analytics.js"></script>
+	<script src="https://example.com/analytics.js"></script>
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<script type="text/partytown" src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
-	<script type="text/partytown" type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
-	<script type="text/partytown" src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
 
 </head>
 <body>
@@ -114,7 +114,7 @@
 			<p><tt>Designed and developed by: Kato Isa</tt> </p>
 		</div>
 	</div>
-	<script type="text/partytown">
+	<script>
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
@@ -133,6 +133,6 @@
 	<!-- simplified.js library -->
 	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/partytown" src="UX/main.js"></script>
+    <script type="text/javascript" src="UX/main.js"></script>
 </body>
 </html>
