--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ticke-thub</title>
+	<title>ticket-thub</title>
 	<link rel="stylesheet" type="text/css" href="UI/style.css">
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
