--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ticket-thub</title>
-	<link rel="stylesheet" type="text/css" href="UI/style.css">
+	<link rel="stylesheet" type="text/css" href="./UI/style.css">
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
@@ -120,8 +120,8 @@
       firebase.initializeApp(firebaseConfig);
 	  </script>
 	<!-- simplified.js library -->
-	<script type="text/javascript" src="UX/simplify(js)/Simplified.js"></script>
+	<script type="text/javascript" src="./UX/simplify(js)/Simplified.js"></script>
 	<!-- site scripts -->
-    <script type="text/javascript" src="UX/main.js"></script>
+    <script type="text/javascript" src="./UX/main.js"></script>
 </body>
 </html>
